--- a/fm_index_analysis.ipynb
+++ b/fm_index_analysis.ipynb
@@ -28,6 +28,30 @@
     "# Ensure you have pyBigWig installed. If not, uncomment the following line:\n",
     "!pip install pyBigWig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_bigwig_data(file_path, chrom, start, end):\n",
+    "    bw = pyBigWig.open(file_path)\n",
+    "    values = bw.values(chrom, start, end)\n",
+    "    bw.close()\n",
+    "    return [v for v in values if v is not None]\n",
+    "\n",
+    "# Replace with your actual BigWig file path\n",
+    "bigwig_file = \"path/to/your/epigenetic_data.bw\"\n",
+    "\n",
+    "# Example genomic region (adjust as needed)\n",
+    "chrom = \"chr1\"\n",
+    "start = 1000000\n",
+    "end = 2000000\n",
+    "\n",
+    "data = read_bigwig_data(bigwig_file, chrom, start, end)\n",
+    "print(f\"Read {len(data)} data points from {chrom}:{start}-{end}\")"
+   ]
   }
  ],
  "metadata": {
